@@ -1,4 +1,3 @@
-#define PQXX_HAVE_LO_TELL 1
 /* #undef PQXX_HAVE_PQDESCRIBEPORTAL */
 /* #undef PQXX_HAVE_PQENCRYPTPASSWORD */
 #define PQXX_HAVE_PQESCAPEBYTEA 1
