@@ -1,4 +1,3 @@
-#define PQXX_HAVE_LO_TELL 1
 #define PQXX_HAVE_PQDESCRIBEPORTAL 1
 #define PQXX_HAVE_PQENCRYPTPASSWORD 1
 #define PQXX_HAVE_PQESCAPEBYTEA 1
