@@ -17,7 +17,6 @@ PQXX_HAVE_BOOST_SMART_PTR	public	compiler
 PQXX_HAVE_CPP_PRAGMA_MESSAGE	public	compiler
 PQXX_HAVE_CPP_WARNING	public	compiler
 PQXX_HAVE_DISTANCE	internal	compiler
-PQXX_HAVE_LO_TELL	internal	libpq
 PQXX_HAVE_LONG_LONG	public	compiler
 PQXX_HAVE_LONG_DOUBLE	public	compiler
 PQXX_HAVE_NAN	internal	compiler
